I aded a new file

--- a/contact.html
+++ b/contact.html
@@ -6,16 +6,21 @@
     <title>Netflix</title>
 </head>
 <body>
-    <label for="name">
-        <input type="name">
-    </label>
+    <form>
 
-    <label for="email">
-        <input type="email">
-    </label>
+        <label for="name">
+            <input type="name">
+        </label>
 
-    <label for="text">
-        <input type="text">
-    </label>
+        <label for="email">
+            <input type="email">
+        </label>
+
+        <label for="text">
+            <input type="text">
+        </label>
+
+        <button>Submit</button>
+    </form>
 </body>
 </html>
