i added a new file

--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>About Our Project</h1>
-    <a href="index.html">Index</a>
+    <a href="index.html">Home</a>
 </body>
 </html>
